# lounge-memo

./: .gitignore  Cargo.toml  README.md  vcpkg.json
.github/workflows/: build.yaml
src/: capture.rs  capture_raw.rs  consumer.rs  courses.rs  gui.rs  main.rs  mogi_result.rs  producer.rs  race_result.rs  settings.rs  size.rs  word.rs
src/capture/: directshow.rs  mod.rs  msmf.rs
src/detector/: capture_total_scores_detector.rs  course_detector.rs  mod.rs  position_detector.rs  race_finish_detector.rs
src/gui/: app.rs  course_dropdown.rs  mod.rs
