[package]
name = "lounge-memo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
escapi = "4.0.0"
image = { version = "0.24.6", features = ["png"] }
once_cell = "1.18.0"
rust_ocr = "0.1.5"
template-matching = { git = "https://github.com/naari3/template-matching", rev = "f2b0efd", version = "0.2.1", features = [
    "image",
] }
tokio = { version = "1.29", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
] }
fps_counter = "2.0.0"
chrono = { version = "0.4.26", features = ["serde"] }
strsim = "0.10.0"
fern = "0.6.2"
log = "0.4.19"
eframe = "0.22.0"
egui_extras = "0.22.0"
egui-dropdown = "0.3.0"
opencv = { version = "0.84.4", features = ["clang-runtime"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.17.0"
kanaria = "0.2.0"

# crateにある最新のvcpkgはまだ VCPKG_INSTALLED_ROOT に対応していないので、直接指定する
# おそらく0.2.16がリリースされたらこのセクションは削除できる
[patch.crates-io.vcpkg]
git = "https://github.com/mcgoo/vcpkg-rs"
rev = "56e85dcb40721012e6bb6e49d8aa2b0cd2fa1ec5"

[dev-dependencies]
ffmpeg-next = { version = "6.0.0" }
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies.windows]
version = "0.42"
features = [
    "Graphics_Imaging",
    "Globalization",
    "Foundation",
    "Foundation_Collections",
    "Media_Ocr",
    "Win32_System_WinRT",
    "Win32_Media_DirectShow",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com_StructuredStorage",
]
